kubernetes/applications/taskflow-api/networkpolicy-app-egress-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-taskflow-api-egress-to-postgresql
  namespace: taskflow
spec:
  podSelector:
    matchLabels:
      app: taskflow-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql
      ports:
        - protocol: TCP
          port: 5432
