kubernetes/applications/taskflow-api/networkpolicy-app-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-taskflow-api-to-postgresql
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: taskflow-api
      ports:
        - protocol: TCP
          port: 5432
